--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,69 +1,24 @@
+<%= javascript_include_tag "main.js" %> 
+
 <header>
   <section id="modal" class="hidden">
     <div class="container">
       <ul class="modal-ul">
         <li class="login-li">
-        
-            <div style="height:26px;">
-              <p class="form-error" style="color:red; text-align:center;">emailもしくはpasswordに誤りがあります</p>
-            </div>
-   
-
-
-
+          <div style="height:26px;">
+            <p class="form-error" style="color:red; text-align:center;">emailもしくはpasswordに誤りがあります</p>
+          </div>
 
 
 <%# ajax実装 %>
 
+          <div class="login_container">
+            <input type="text" size="25" name="session[email]" id="user_email" placeholder="EMAIL">
+            <input type="text" size="25" name="session[password]" id ="user_password" placeholder="PASSWORD" >
+            <input type="submit" id="btn_submit" name="commit" value="log in!" data-disable-with="Create User">
+          </div>
 
-  <div class="login_container">
-    <input type="text" size="25" name="session[email]" id="user_email" placeholder="EMAIL">
-    <input type="text" size="25" name="session[password]" id ="user_password" placeholder="PASSWORD" >
-    <input type="submit" id="btn_submit" name="commit" value="log in!" data-disable-with="Create User">
-  </div>
-
-  <%# <% @users.each do |user| %/>
-    <%= user.name %/><br>
-  <% end %/> %>
-
-  <script>
-    $("#btn_submit").click(function(){
-      const email = $("#user_email").val();
-      const password = $("#user_password").val();
-      $.ajax({
-        type: 'POST', //post,get
-        url: "/sessions/create",
-        data: {email: email, password: password},//user[name]
-        dataType: "json",
-        beforeSend: function(xhr) {
-            xhr.setRequestHeader("X-CSRF-Token", $('meta[name="csrf-token"]').attr('content'))
-        },
-      }).done(function(data){
-        
-        console.log(data.error);
-        if (data.message === "error"){
-          console.log("unko");
-          $(".form-error").addClass('error-message');
-        } else if (data.message === "success"){
-          window.location.replace('<%= root_path %>');
-        } 
-        
-        //alert(data.user.name + "で登録されました！")
-
-      });
-      // console.log($("#user_name").val());
-    });
-  </script>
-
-
-
-<%# 
-          <%= form_for(:session, url: login_path , html: { class: "login_container" }) do |f| %/>
-            <input type="text" size="25" placeholder="EMAIL" name="session[email]">
-            <input type="text" size="25" placeholder="PASSWORD" name="session[password]">
-            <input type="submit"  value="log in!">
-          </% end %/> %>
-              <p class="signup-text">新規登録は<span onclick="SignUpPage()"><a>コチラ</a></span></p>
+          <p class="signup-text">新規登録は<span onclick="SignUpPage()"><a>コチラ</a></span></p>
         </li>
         <li class="sign-up-li">
           <p>Sign Up!</p>
@@ -108,10 +63,7 @@
             <button class="btn-go">Go!</button>
           </div>
         </li>
-      
-  
       </ul>
-        
     </div>
     <button id="prev" class="hidden">←戻る</button>
     <button id="next" class="hidden">進む→</button>
@@ -121,31 +73,28 @@
   </section>
   <div id="mask" class="hidden"></div>
   
-  
   <div class="status_bar">
-    <% if @error_message %>
-      <div class="form-error">
-        <%= @error_message %>
-      </div>
-    <% end %>
     <form method="get" action="#" class="search_container">
       <input type="text" size="25" placeholder="キーワード検索">
       <input type="submit"  value="&#xf002">
     </form>
-    
     <div class="status_bar_right">
-        <%= link_to image_tag("/assets/login.png"), root_path ,class:"acount-logo" %>
-          <% if logged_in? %>
-            <%= link_to "Log out", logout_path, method: :delete %>
-          <% else %>
-            <span onclick="LoginPage()"><%= link_to "Log in", "#" %></span>
-          <% end %>
-        <ul>
-          <li><%= link_to image_tag("/assets/facebook.png"),'https://www.facebook.com/' %></li>
-          <li><%= link_to image_tag("/assets/Messenger.png"),'https://www.facebook.com/messenger/' %></li>
-          <li><%= link_to image_tag("/assets/insta.png"),'https://www.instagram.com/' %></li>
-          <li><%= link_to image_tag("/assets/twitter.png"),'https://www.twitter.com/' %></li>
-        </ul>
+      <% if logged_in? %>
+        <%= link_to image_tag("/assets/login.png"), "/users/#{current_user.id}" ,class:"acount-logo" %>
+      <% else %>
+        <a class="acount-logo" onclick="LoginPage()"><%= image_tag("/assets/login.png") %></a>
+      <% end %>
+      <% if logged_in? %>
+        <span><%= link_to "Log out", logout_path, method: :delete ,class:"loginout" %></span>
+      <% else %>
+        <span onclick="LoginPage()"><a class="loginout">Log in</a></span>
+      <% end %>
+      <ul>
+        <li><%= link_to image_tag("/assets/facebook.png"),'https://www.facebook.com/' %></li>
+        <li><%= link_to image_tag("/assets/Messenger.png"),'https://www.facebook.com/messenger/' %></li>
+        <li><%= link_to image_tag("/assets/insta.png"),'https://www.instagram.com/' %></li>
+        <li><%= link_to image_tag("/assets/twitter.png"),'https://www.twitter.com/' %></li>
+      </ul>
     </div>
   </div>
   <div class="global-menu">
@@ -155,8 +104,126 @@
         <li><%= link_to "about", about_path %></li>
         <li><%= link_to "ジャンル別", genre_path %></li>
         <li><%= link_to "気分別", feel_path %></li>
-        <li id="signup-btn" onclick="SignUpPage()"><a id="signup">新規登録</a></li>
+
+        <% if logged_in? %>
+
+        <li class="hov-menu"><a>マイメニュー<span>▼</span></a>
+          <ul>
+            <li><a>マイページ</a></li>
+            <li><a>プロフィール編集</a></li>
+            <li onclick="eventModal()"><a>イベント登録</a></li>
+          </ul>
+        </li>
+
+
+          <% else %>
+            <li id="signup-btn" onclick="SignUpPage()"><a id="signup">新規登録</a></li>
+          <% end %>
+        
       </ul>
     </div>
   </div>
+
+
+
+<div class="event-modal hidden">
+  <h3>イベント情報入力</h3>
+  <form method="get" action="#" class="event_container">
+    <div>
+      <label for="e_title">タイトル</label>
+      <input id="e_title" type="text" name="title" value="" placeholder="ギター弾く19時まで">
+    </div>
+
+    <div>
+      <label for="e_memo">メモ</label>
+      <textarea id="e_memo" name="memo" rows="5">これからなんとなくギター弾きます。暇人集まれー。</textarea>
+    </div>
+
+    <div>
+      <label>日時</label>
+      <label for="e_play">今すぐ</label>
+      <input id="e_play" type="radio" name="radio">
+      <label for="e_date">時間指定</label>
+      <input id="e_date" type="radio" name="radio">
+    </div>
+
+    <div>
+      <label for="regularly">定期開催</label>
+      <input id="regularly" type="checkbox">
+    </div>
+    
+    <div>
+      <label>方法</label>
+      <label for="online">オンライン</label>
+      <input id="online" type="radio" name="line">
+      <label for="offline">オフライン</label>
+      <input id="offline" type="radio" name="line">
+    </div>
+
+    <div>
+      <label for="place">場所</label>
+      <input id="place" type="text" name="place" value="">
+    </div>
+    
+    <div>
+      <label for="people">参加人数</label>
+      <input id="people" type="number" name="people" value="">名
+      <span>※空欄で制限なし</span>
+    </div>
+
+    <input type="submit" value="イベント登録" onclick="goEvent();return false;">
+    </form>
+  
+  <div id="event-close" onclick="eventClose()">
+    閉じる
+  </div>
+</div>
+
+<section id="confi-modal" class="hidden">
+  <div class="confi-container">
+    <p>以下の内容で登録します。<br>
+      よろしいですか？
+    </p>
+  </div>
+
+  <div id="confi-close" onclick="confiClose()">
+    戻る
+  </div>
+</section>
+<div id="confi-mask" class="hidden"></div>
+
+
+
+  <script>
+    $("#btn_submit").click(function(){
+      const email = $("#user_email").val();
+      const password = $("#user_password").val();
+      $.ajax({
+        type: 'POST', //post,get
+        url: "/sessions/create",
+        data: {email: email, password: password},//user[name]
+        dataType: "json",
+        beforeSend: function(xhr) {
+            xhr.setRequestHeader("X-CSRF-Token", $('meta[name="csrf-token"]').attr('content'))
+        },
+      }).done(function(data){
+        
+        console.log(data.error);
+        if (data.message === "error"){
+          console.log("unko");
+          $(".form-error").addClass('error-message');
+        } else if (data.message === "success"){
+          window.location.replace('<%= root_path %>');
+        } 
+        
+        //alert(data.user.name + "で登録されました！")
+
+      });
+      // console.log($("#user_name").val());
+    });
+
+  
+
+
+  </script>
 </header>
