--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -7,6 +7,7 @@
   <div class="profile">
     <div class="profile-img">
       <img src="/assets/catman.png">
+      <div class="img-btn"></div>
     </div>
     <p><%= @user.name %></p>
     <p>フォロー：３ フォロワー：４</p>
