--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,6 +86,33 @@
 </div>
 <div class="btn-area">
 </div>
+<script>
 
+  const targets = document.querySelectorAll('div.anime-section li');
+  const options = {
+    root: null,
+    threshold:1,
+  };
+
+  const observer = new IntersectionObserver(callback ,options);
+
+
+  function callback(entries, obs){
+    
+    entries.forEach(entry => {
+
+      if (!entry.isIntersecting){
+        return;
+      }
+
+    entry.target.classList.add('appear');
+    obs.unobserve(entry.target);
+  });
+  }
+
+  targets.forEach(target => {
+    observer.observe(target);
+  });
+</script>
 
 
