--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-  <html lang="ja">
+<html lang="ja">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,14 +7,12 @@
     <title><%= full_title(yield(:title)) %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
-    <%# <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %> 
-
-    <%= javascript_include_tag 'main', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Chewy&family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
@@ -30,33 +28,7 @@
     <%= debug(params) if Rails.env.development? %>
     
     <%= render 'layouts/footer' %>
-    <script>
-
-      const targets = document.querySelectorAll('div.anime-section li');
-      const options = {
-        root: null,
-        threshold:1,
-      };
-
-      const observer = new IntersectionObserver(callback ,options);
-
-
-      function callback(entries, obs){
-        
-        entries.forEach(entry => {
-
-          if (!entry.isIntersecting){
-            return;
-          }
-
-        entry.target.classList.add('appear');
-        obs.unobserve(entry.target);
-      });
-      }
-
-      targets.forEach(target => {
-        observer.observe(target);
-      });
-    </script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js">
+</script>
   </body>
 </html>
