--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -816,16 +816,18 @@ header{
       "btnleft    btnright"    1fr
       /50% 50%;
   
-    & img{
-      object-position: 50% 20%;
-      width: 200px;
-      height: 100px;
-      object-fit: cover;
-    }
-    & dd{
-      margin-top: 20px;
-    }
-
+  & img{
+    object-position: 50% 20%;
+    width: 200px;
+    height: 100px;
+    object-fit: cover;
+  }
+  & dd{
+    margin-top: 20px;
+  }
+  & a:any-link{
+    color: $greenfont;
+  }
   
 }
 .pick-event{
@@ -964,6 +966,9 @@ footer{
     height: 100%;
     text-align: center;
   }
+  & .g-page-title{
+    margin:0 0 10px 30px;
+  }
 }
 
 
@@ -1012,24 +1017,47 @@ footer{
   display: flex;
   height: 610px;
 }
+
+// editページ
+
+
 .edit-page-section{
   height: 610px;
   & .profile{
     & .profile-img{
       display: flex;
+      align-items: flex-end;
       width:245px;
       & img{
         width:50%;
       }
       & .img-btn{
         width:50%;
-        background-color: lightgray;
+        background-color: $emerald;
+        margin:20px;
+        height: 30px;
+        border-radius: 5px;
+        font-size:14px;
+        line-height:30px;
+        cursor: pointer;
+        border-color: lightgray;
+        &:hover{
+          opacity: 0.7;
+        }
       }
+    }
+    & #edit-btn{
+      margin: 0 auto;
+    width: 100px;
+    font-size: 14px;
+    background-color: green;
+    height: 50px;
+    border-radius:22px;
     }
   }
 }
 .profile{
-  padding-right: 30px;
+  // padding-right: 30px;
   text-align: center;
   // outline: solid;
   flex:.8;
@@ -1045,10 +1073,31 @@ footer{
     margin-bottom:10px;
   }
   & .profile-coment{
-    width: 245px;
-    margin: 0 auto;
+    overflow-wrap: anywhere;
+    width:300px;
+    margin: 0 auto 20px;
+    & .edit-error{
+      color:red;
+      font-size: 14px;
+    }
+    & .profile-comment-text{
+      text-align: left;
+    }
+    
   }
-
+  .edit-btn{
+    margin: 0 auto;
+    width: 100px;
+    font-size: 14px;
+    background-color: green;
+    height: 50px;
+    border-radius: 22px;
+    border:none;
+    color: white;
+    &:hover{
+      opacity: 0.7;
+    }
+  }
 }
 
 .event-display{
