--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -358,6 +358,35 @@ button:hover {
   display: none;
 }
 
+#follower {
+  position: relative;
+}
+
+#follow-modal {
+  position: absolute;
+  top: 10%;
+  width: 250px;
+  height: 150px;
+  border-radius: 60px;
+  padding: 40px;
+  border: solid 1px black;
+  background: #fff;
+  z-index: 20;
+}
+
+#follow-modal p {
+  margin-bottom: 30px;
+}
+
+#follow-modal .unlock-btn {
+  border: solid 1px black;
+  width: 150px;
+  border-radius: 5px;
+  cursor: pointer;
+  text-align: center;
+  margin: 0 auto 20px;
+}
+
 .event-modal {
   background: #fff;
   width: 480px;
@@ -1246,7 +1275,7 @@ footer .copy-write {
 
 .event-container {
   margin: 60px auto 0;
-  width: 500px;
+  width: 600px;
 }
 
 .event-container .tab-menu {
@@ -1276,6 +1305,35 @@ footer .copy-write {
   opacity: 0.5;
   -webkit-transition: 0.4s;
   transition: 0.4s;
+}
+
+.follower {
+  background-color: white;
+  border: solid 1px black;
+  border-radius: 10px;
+  height: 50px;
+  margin-top: 10px;
+  padding: 5px 10px;
+  position: relative;
+}
+
+.follower p {
+  display: inline-block;
+  line-height: 50px;
+}
+
+.follower .follow-btn {
+  border: solid 1px black;
+  border-radius: 15px;
+  line-height: 30px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  right: 40px;
+  padding: 2px;
+  color: black;
+  cursor: pointer;
 }
 
 .content.active {
